--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="scripts/jquery.min.js"></script>
 		<style>
 			@import url('https://fonts.googleapis.com/css?family=Roboto');
 
