--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			var interval;
 			var intervalSet = false;
 			var format = "00"
-			var initialValue;
+			var initialValue = [];
 			
 			function playAudio(id) {
 				var audioElement = document.getElementById(id);
