--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						if (intervalSet){
 							return arr;
 						} else {
-							return initialValue;
+							return [5,0];
 						}
 						
 					}
