--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<script type='text/javascript'>
 			var interval;
 			var intervalSet = false;
-			var format = "00"
+			var format = "00";
 			var initialValue = [];
 			
 			function playAudio(id) {
@@ -73,7 +73,7 @@
 						if (intervalSet){
 							return arr;
 						} else {
-							return [5,0];
+							return initialValue;
 						}
 						
 					}
